	RHEL 5.
2016-08-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.1.
2016-08-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/walltime-panel.cpp' that broke the build on
	RHEL 5.
2016-08-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/cmdswitch.cpp' that broke the build on
	RHEL 5.
2016-08-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.2.
2016-08-28 Fred Gleason <fredg@paravelsystems.com>
	* Modified build system in 'Makefile.am' to use Pkgconfig to
	locate library binaries.
2016-08-28 Fred Gleason <fredg@paravelsystems.com>
	* Added 'icons/walltime-48x48.ico'.
2016-08-29 Fred Gleason <fredg@paravelsystems.com>
	* Enabled linking of the application icon on Windows.
2016-08-29 Fred Gleason <fredg@paravelsystems.com>
	* Enabled build of a GUI executable under Windows.
2016-08-29 Fred Gleason <fredg@paravelsystems.com>
	* Rewrote 'LoadConfig()' and 'SaveConfig()' methods to use
	QSettings'.
2016-09-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make install-win32' target.
2016-09-02 Fred Gleason <fredg@paravelsystems.com>
	* Changed the legend on the reset button to 'Clear'.
	* Added keyboard accelerators for the four buttons.
2016-09-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SpaceBar Action' control to the Configuration Dialog.
2016-09-02 Fred Gleason <fredg@paravelsystems.com>
	* Added 'walltime-panel.ism'.
2016-09-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.3.
2016-09-03 Fred Gleason <fredg@paravelsystems.com>
	* Added 'libgcc_s_sjlj-1.dll' to the set of installation DLLs for
	Windows in 'Makefile.am' and 'walltime-panel.ism'.
2016-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/walltime-panel.cpp' that caused the timer to
	count in the wrong direction after pressing 'Clear'.
2016-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.4.