@@ -1,4 +1,3 @@
 The following have contributed to walltime-panel:
 
 Fred Gleason <fredg@paravelsystems.com>
-   Application Architect
