@@ -36,41 +36,6 @@ CmdSwitch::CmdSwitch(int argc,char *argv[],const char *modname,
     args.push_back(argv[i]);
   }
   Initialize(args,modname,modver,usage);
-
-
-  /*
-  unsigned l=0;
-  bool handled=false;
-
-  for(int i=1;i<argc;i++) {
-#ifndef WIN32
-    if(!strcmp(argv[i],"--version")) {
-      printf("%s v%s\n",modname,modver);
-      exit(0);
-    }
-#endif  // WIN32
-    if(!strcmp(argv[i],"--help")) {
-      printf("\n%s %s\n",modname,usage);
-      exit(0);
-    }
-    l=strlen(argv[i]);
-    handled=false;
-    for(unsigned j=0;j<l;j++) {
-      if(argv[i][j]=='=') {
-	switch_keys.push_back(QString(argv[i]).left(j));
-	switch_values.push_back(QString(argv[i]).right(l-(j+1)));
-	switch_processed.push_back(false);
-	j=l;
-	handled=true;
-      }
-    }
-    if(!handled) {
-      switch_keys.push_back(QString(argv[i]));
-      switch_values.push_back(QString(""));
-      switch_processed.push_back(false);
-    }
-  }
-  */
 }
 
 
